fix column styling on smaller screens

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -50,10 +50,6 @@
     width: 100%;
   }
 
-  .col {
-    --ifm-col-width: 30%;
-  }
-
   body .footer__bottom {
     width: 100%;
   }
